<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">化妆柜小管家</string>
    <string name="action_add">添加物品</string>

    <string name="fragment_one">测试</string>
    <string name="fragment_two">物品管理</string>
    <string name="fragment_three">发现</string>
    <string name="fragment_about">About</string>

    <string name="number1">I</string>
    <string name="number2">II</string>
    <string name="number3">III</string>

    <string name="fragment">Fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="user_name">个人中心</string>
    <string name="user_email">WSN小分队</string>

    <string name="content_description">image view</string>


    <string name="about_text">This application is an example of a Navigation Drawer implementation using a new/bind pattern and the ButterKnife library.</string>
    <string name="about_text2">It was written only for development purposes.</string>

    <string name="about_author">Author: Michal Bialas</string>
    <string name="about_contact">Contact: mmbialas@gmail.com</string>
    <string name="about_libraries">Libraries:</string>
    <string name="about_butterknife">ButterKnife by Jake Wharton</string>
    <string name="about_robototextview">RobotoTextView by Evgeny Shishkin</string>

    <string name="about_msg_subject">[NavigationDrawerSI]</string>
    <string name="about_mail_chooser">Send with</string>
    <string name="about_intent_failed">The requested application could not be launched.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name_edit">name</string>
    <string name="sigin">注册账户</string>
    <string name="login">登录</string>
    <!-- LMY‘s-->
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="cityname">西安</string>
    <string name="weather">天气:</string>
    <string name="temp">温度:</string>
    <string name="bolanghao">~</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">搜索设备</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <!-- WMF Dialog-->
    <string name="date_picker_title">选择生产日期：</string>
    <string name="BeginTestButton">开始测试</string>
    <string name="str_dialog_title">正在测试</string>
    <string name="str_dialog_body">请稍等</string>
    <string name="ScanButton">搜索设备</string>
    <string name="dry">干燥</string>
    <string name="moist">水润</string>
    <string name="afterTestText">恭喜,您此刻的肌肤水分值在同龄人群中处于偏高水平,肌肤呈现水润状态,护肤保养工作到位,未来两小时请注意再次测试,以监测肌肤水分流失速度,建议此期间喝水300ml左右,以维持体内水循环</string>
    <string name="age">年  龄</string>
    <string name="skinState">肌肤类型</string>

    <style name="my_actionbar_style" parent="@android:style/Widget.Holo.Light.ActionBar">
        <item name="android:background">#647b97</item>
        <item name="android:titleTextStyle">@style/AcBar_titleStyle</item>
    </style>

    <style name="AcBar_titleStyle">

        <item name="android:textColor">#FFFFFF</item>
    </style>
</resources>
