<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/user_name_edit"
            android:id="@+id/Name_sigin_Edittext" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/Password_sigin_Edittext" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="@dimen/text_size_medium"
                android:layout_weight="0.3" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="3"
                android:id="@+id/age_sigin_Edittext" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:text="@string/skinState"
                android:textSize="@dimen/text_size_medium"
                android:layout_weight="0.3" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="3"
                android:id="@+id/skinstate_sigin_Edittext" />


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sigin"
            android:id="@+id/Signin_sigin_Button"
            android:textSize="@dimen/text_size_medium"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@drawable/button_basic"/>

    </LinearLayout>
</FrameLayout>
