<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                style="@style/Match"
                android:id="@+id/fragmentThree"
                android:background="@color/bg_yellow">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/city"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/cityname"
                android:textSize="@dimen/text_size_large">

            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/weather"
                android:textSize="@dimen/text_size_large">
            </TextView>
            <TextView
                android:id="@+id/weatherTextView"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/weather"
                android:textSize="@dimen/text_size_medium">
            </TextView>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textSize="@dimen/text_size_large">
            </TextView>
            <TextView
                android:id="@+id/temp_lowTextView"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textSize="@dimen/text_size_medium">
            </TextView>
            <TextView
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:text="@string/bolanghao"
                android:textSize="@dimen/text_size_medium">
            </TextView>
            <TextView
                android:id="@+id/temp_highTextView"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textSize="@dimen/text_size_medium">
            </TextView>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/zwx_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textSize="@dimen/text_size_medium"
                android:layout_span="4">
            </TextView>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ssd_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textSize="@dimen/text_size_medium"
                android:nestedScrollingEnabled="false"
                android:layout_span="4">
            </TextView>

        </TableRow>
    </TableLayout>
</RelativeLayout>